<resources>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="sign_in_password">Password</string>
  <string name="sign_in_forgot_your_password">Forgot your password?</string>
  <string name="sign_in_button">Sign In</string>
  <string name="e_mail">E-mail</string>
  <string name="password_reset_link">We\'ll send you a password reset link</string>
  <string name="enter_your_e_mail">Enter your E-mail</string>
  <string name="submit">Submit</string>
  <string name="dismiss">Dismiss</string>
  <string name="password_reset">Password Reset</string>
  <string name="password_sent_message">The password reset confirmation link has bent sent to %1$s</string>
  <string name="okay_got_it">Got it</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="full_name">Full name</string>
  <string name="contact_number">Contact Number</string>
  <string name="save_changes">Save changes</string>
  <string name="vehicle_name">Vehicle Name</string>
  <string name="plate_number">Plate Number</string>
  <string name="description">Description</string>
  <string name="choose_photo">Choose photo</string>
  <string name="unsave_changes">Unsaved changes</string>
  <string name="settings_changes_dialog_message">You have made changes to your settings. Do you want to save or discard them?</string>
  <string name="save">Save</string>
  <string name="discard">Discard</string>
  <string name="old_password">Current Password</string>
  <string name="confirm_password_change">Confirm Password Change</string>
  <string name="change_password">Change Password</string>
  <string name="security_measures">Re-authenticate with your old password to reflect your new password changes.</string>
  <string name="driver">Driver</string>
  <string name="vehicles">Vehicle</string>
  <string name="delivery_information">Delivery Information</string>

  <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
  <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
  <string name="permission_required_toast">Location permission is required for this demo.</string>
  <string name="delivery_title">Title</string>
  <string name="delivery_destination">Destination</string>
  <string name="delivery_items">Items</string>
  <string name="delivery_inbound">Inbound</string>
  <string name="delivery_outbound">Outbound</string>
  <string name="home">Home</string>
  <string name="account">Account</string>
  <string name="active_job">Active Job</string>
  <string name="no_job_assigned_yet">No job assigned yet</string>
  <string name="check_again_later">Check again later :)</string>

  <string name="active_jobs_notify">Notify</string>
  <string name="active_jobs_chat">Chat</string>
  <string name="active_jobs_confirm">Confirm</string>
  <string name="active_jobs_emergency">Emergency</string>
  <string name="duration">Duration</string>
  <string name="distance_left">Distance Left:</string>
  <string name="not_yet_implemented">Not yet implemented</string>
  <string name="eta">ETA:</string>
  <string name="fleet">Fleet</string>
  <string name="statistics">Statistics</string>
  <string name="history">History</string>
  <string name="distance">Distance</string>
  <string name="estimated_time_of_arrival">Estimated Time of Arrival</string>
  <string name="start_delivery">Start item delivery</string>
  <string name="not_available">NA</string>
  <string name="new_inbound_delivery">New Inbound Delivery</string>
  <string name="new_outbound_delivery">New Outbound Delivery</string>
  <string name="logout">Logout</string>
  <string name="arrive_in">Arrive in</string>
  <string name="distance_remaining">Distance remaining</string>
  <string name="pending">Pending</string>
  <string name="in_progress">In progress</string>
  <string name="empty_message_state">Ops! There are no %1$s jobs yet. Add another delivery so you can keep track of your %1$s deliverables.</string>
  <string name="in_bound_delivery">Ongoing Inbound Delivery</string>
  <string name="out_bound_delivery">Ongoing Outbound Delivery</string>
  <string name="search_by">Search by</string>
  <string name="select_date">Select date</string>
  <string name="delivered_items">Delivered Items</string>
  <string name="received_items">Received Items</string>
  <string name="inbound_delivery_message">Ongoing Inbound Delivery</string>
  <string name="outbound_delivery_message">Ongoing Outbound Delivery</string>
  <string name="delete">Delete</string>
  <string name="set_state">Set as %1$s</string>
  <string name="no_available_drivers">No Available Drivers</string>
  <string name="no_available_vehicles">No Available Vehicles</string>
  <string name="cr_no">COR No.</string>
  <string name="license_number">License Number</string>
  <string name="driver_credentials">License Credentials</string>
  <string name="personal_information">Personal Information</string>
  <string name="others">Others</string>
  <string name="month">Month</string>
  <string name="expiration_date">Expiration Date</string>
  <string name="capacity">Load Capacity</string>
  <string name="vehicle_information">Vehicle Information</string>
  <string name="restrictions">Restrictions</string>
  <string name="profile_picture">Profile Picture</string>
  <string name="max_load">Max Load</string>
  <string name="unit">Unit</string>
  <string name="kg">kg</string>
  <string name="dash">-</string>
  <string name="time_started">Time Started</string>
  <string name="location_state_message">Cannot retrieved current coordinates. Please check your location or GPS if it\'s enabled.</string>
  <string name="error_load_try_again">Cannot load data at the moment. Please try again later.</string>
</resources>