<?xml version="1.0" encoding="utf-8"?>
<layout>

<data>
  <variable
      name="viewModel"
      type="dev.forcecodes.truckme.ui.dashboard.MapDeliverySharedViewModel"
      />
</data>
<LinearLayout android:background="@drawable/rounded_top_corners"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:elevation="16dp"
    android:visibility="gone"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <FrameLayout
      android:background="@drawable/rounded_top_corners"
      android:id="@+id/toolbar_frame"
      app:cardCornerRadius="0dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:paddingTop="@dimen/spacing_small"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Delivery Information"
        app:titleCentered="true"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/scroll_indicator"
        android:layout_width="25dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_small"
        android:paddingTop="@dimen/spacing_smallest"
        android:alpha="0.2"
        app:cardBackgroundColor="@color/cardview_dark_background"
        android:paddingBottom="@dimen/spacing_smallest"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        />

  </FrameLayout>

  <androidx.core.widget.NestedScrollView
      android:fillViewport="true"
      android:overScrollMode="never"
      android:id="@+id/nested_scroll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        >

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_medium"
          android:hint="@string/delivery_title"
          app:errorEnabled="true"
          app:startIconDrawable="@drawable/ic_delivery_title"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:maxLines="1"
            android:id="@+id/title_et"
            android:layout_height="wrap_content"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:visibility="visible"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:hint="@string/delivery_destination"
          app:errorEnabled="true"
          android:clickable="false"
          app:startIconDrawable="@drawable/ic_destination_pin"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:singleLine="true"
            android:id="@+id/destination_et"
            android:ellipsize="end"
            destination="@{viewModel}"
            android:layout_width="match_parent"
            android:enabled="false"
            android:layout_height="match_parent"
            android:maxLines="1"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/driver_text_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/driver"
          app:errorEnabled="true"
          app:startIconDrawable="@drawable/ic_account_circle"
          >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:id="@+id/driver_et"
            android:inputType="none"
            android:maxLines="1"
            android:layout_height="wrap_content"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/vehicle_text_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/vehicles"
          app:errorEnabled="true"
          app:startIconDrawable="@drawable/nav_ic_fleet"
          >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:id="@+id/vehicle_et"
            android:inputType="none"
            android:maxLines="1"
            android:layout_height="wrap_content"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/delivery_items"
          app:errorEnabled="true"
          app:startIconDrawable="@drawable/ic_cart"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/items_et"
            items="@{viewModel}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="3"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:hint="@string/contact_number"
          app:startIconDrawable="@drawable/ic_phone"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_et"
            android:inputType="none"
            android:maxLines="1"
            contact="@{viewModel}"
            android:clickable="false"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

      </com.google.android.material.textfield.TextInputLayout>

      <RadioGroup
          android:layout_marginTop="@dimen/spacing_small"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_medium"
          android:gravity="center"
          android:orientation="horizontal"
          >

        <RadioButton
            android:onClick="@{(v) -> viewModel.deliveryMode(true)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_inbound"
            />

        <RadioButton
            android:onClick="@{(v) -> viewModel.deliveryMode(false)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/delivery_outbound"
            />
      </RadioGroup>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/submit"
          android:enabled="@{viewModel.enableSubmitButton}"
          android:layout_marginBottom="@dimen/spacing_normal"
          android:layout_width="match_parent"
          android:insetTop="0dp"
          android:insetBottom="0dp"
          android:layout_height="wrap_content"
          android:text="@string/submit"
          />

    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</LinearLayout>
</layout>