<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/spacing_large"
    android:paddingStart="@dimen/spacing_large">

  <com.google.android.material.textfield.TextInputLayout
      android:layout_marginTop="@dimen/spacing_large"
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/sign_in_password"
      app:errorEnabled="true"
      app:boxCornerRadiusBottomStart="8dp"
      app:boxCornerRadiusBottomEnd="8dp"
      app:boxCornerRadiusTopEnd="8dp"
      app:boxCornerRadiusTopStart="8dp"
      app:boxStrokeWidth="0dp"
      app:boxStrokeWidthFocused="0dp"
      app:startIconDrawable="@drawable/ic_lock">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:inputType="textPassword"
        />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/confirm_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/confirm_password"
      app:errorEnabled="true"
      app:startIconDrawable="@drawable/ic_lock"
      app:boxCornerRadiusBottomStart="8dp"
      app:boxCornerRadiusBottomEnd="8dp"
      app:boxCornerRadiusTopEnd="8dp"
      app:boxCornerRadiusTopStart="8dp"
      app:boxStrokeWidth="0dp"
      app:passwordToggleEnabled="true"
      app:boxStrokeWidthFocused="0dp"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:layout_marginTop="@dimen/spacing_extra_large"
      android:id="@+id/submit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginBottom="@dimen/spacing_normal"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:letterSpacing="0"
      android:text="@string/change_password"
      app:cornerRadius="8dp"
      />
</LinearLayout>